--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 34
 
     defaultConfig {
-        applicationId "com.example.imageclassificationlivefeed"
+        applicationId "com.brogrammer.attendanceapp"
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 1
@@ -34,7 +34,7 @@ android {
     aaptOptions {
         noCompress "tflite"
     }
-    namespace 'com.example.imageclassificationlivefeed'
+    namespace 'com.brogrammer.attendanceapp'
 
     kotlinOptions {
         jvmTarget = "1.8"
